_sass/grid.scss
.container {
  padding-left: 20px;
  padding-right: 20px;
  margin-right: auto;
  margin-left: auto;
}
.container-narrow {
  padding-left: 20px;
  padding-right: 20px;
  max-width: 700px;
  margin-bottom: 20px;
  margin-right: auto;
  margin-left: auto;
}
.main-content {
  padding-top: 20px;
  padding-bottom: 20px;
}
.row {
  margin-left: -15px;
  margin-right: -15px;
}
.row:after {
   content: " ";
   visibility: hidden;
   display: block;
   height: 0;
   clear: both;
}
[class*="col-"] {
  float: left;
  padding-left: 15px;
  padding-right: 15px;
}
.col-3 {
  width: 25%;
}
.col-4 {
  width: 33.33333%;
}
.col-8 {
  width: 75%;
}
.col-12 {
  width: 100%;
}

